# gingaflow

./: .gitignore  00_README_ANALISE_COMPLETA.md  01_LIST_REVIEW_MACRO.md  04_BANCO_DADOS_MIGRACAO.md  05_GAP_ANALYSIS_WEB_MOBILE.md  CORRECAO_FINAL_GRADUACOES.md  CORRECOES_TYPESCRIPT_29_01_2026.md  DOCUMENTACOES_CRIADAS.md  ERRO_GRADUACOES_RESOLVIDO.md  PLANO_ACAO_HOJE.md  PLANO_TESTES_29_01_2026.md  PLANO_TESTES_MOBILE.md  PROGRESSO_HOJE.md  README.md  RELATORIO_TESTES_E2E.md  RESUMO_TESTES.md  SOLUCAO_DEFINITIVA_CACHE.md  SOLUCAO_DRASTICA_SPLASH.md  STATUS_ATUAL_28_01_2026.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-lock.yaml.2098000613  pnpm-workspace.yaml  pnpm_output.txt  start-dev.bat
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
database/: schema.sql  supabase_schema.sql
docs/: 02_VALIDACAO_E2E_FLUXOS.md  03_CONSISTENCIA_DADOS.md  06_PLANO_ACAO_PRODUCAO.md  ANALISE_TECNICA_COMPLETA.md  APP_NO_EMULADOR.md  CAUSA_RAIZ_BABEL_CONFIG.md  CORRECAO_BODYSCHEMA.md  CREDENCIAIS_LOGIN.md  DEBUG_COMPLETO_29_01_2026.md  DOWNGRADE_REANIMATED.md  ERROS_TROUBLESHOOTING.md  ERRO_404_SETTINGS.md  ERRO_WORKLETS_CACHE.md  EXPO_RECOMPILANDO.md  FINAL_DELIVERY.md  GUIA_EXPO_GO.md  GUIA_TESTES_USUARIO.md  LIMPEZA_COMPLETA.md  NETWORK_ERROR_RESOLVIDO.md  PLANO_ACAO_TECNICO.md  PLANO_MVP_MOBILE_23_02_2026.md  PRONTO_PARA_TESTAR.md  RELATORIO_FINAL_28_01_2026.md  RESUMO_TESTES_VISUAL.md  SPRINT_1_COMPLETA.md  SPRINT_2_FINANCEIRO.md  SPRINT_3_EM_ANDAMENTO.md  STATUS_30_01_2026.md  STATUS_TESTES_29_01_2026.md  URL_EXPO_GO.md
(+160 files in other folders)
