[package]
name = "gingaflow"
version = "0.1.0"
description = "GingaFlow Desktop"
authors = ["GingaFlow"]
edition = "2021"

[dependencies]
tauri = { version = "1", features = [ "http-all", "shell-open", "path-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1", features = ["sqlite"] }

[build-dependencies]
tauri-build = { version = "1", features = [] }

